<resources>
    <string name="app_name">Watchlist</string>
    <string name="homeMenuItemText">Home</string>
    <string name="watchListMenuItemText">Watchlist</string>
    <string name="watchedListMenuItemText">Watched</string>
    <string name="movieGenreLabelText">Genre:</string>
    <string name="movieDurationLabelText">Duration:</string>
    <string name="movieReleaseDateLabelText">Release Date:</string>
    <string name="movieRatingLabelText">Rating:</string>
    <string name="movieLanguageLabelText">Language:</string>
    <string name="descriptionLabelText">Description</string>
    <string name="searchBarTitle">Search</string>
    <string name="searchListMenuItemText">Search</string>
    <string name="searchMovieTitleLabelText">Title:</string>
    <string name="movieDescriptionLabelText">Description:</string>
    <string name="addToWatchListButtonText">Add to Watchlist</string>
    <string name="noInternetText">No internet connection</string>
    <string name="removeFromWatchlistText">Remove</string>
    <string name="watchedText">Watched</string>
    <string name="noDetailsSelectedText">No movie selected</string>
</resources>
